[gd_scene load_steps=32 format=3 uid="uid://44k0wfm0bore"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_ibgdh"]
[ext_resource type="PackedScene" uid="uid://b27cg6sforp66" path="res://scenes/enemy.tscn" id="2_ywjwa"]
[ext_resource type="PackedScene" uid="uid://dlpjneylmq7g1" path="res://scenes/player.tscn" id="3_lxfbs"]
[ext_resource type="Texture2D" uid="uid://boyhu5ujhe1rr" path="res://icon.svg" id="4_b4dak"]
[ext_resource type="PackedScene" uid="uid://mjp2e5c74612" path="res://scenes/rotatoria_pazza.tscn" id="5_yml8t"]
[ext_resource type="Texture2D" uid="uid://ke3o1gqlauwe" path="res://src/piattaforma_lezza.png" id="6_v0qk3"]
[ext_resource type="Texture2D" uid="uid://balrvc0f6esim" path="res://src/piattaforma_unta.png" id="7_v2mpq"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_0fw2y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h7oyq"]
size = Vector2(582, 39)

[sub_resource type="QuadMesh" id="QuadMesh_ppv4k"]
size = Vector2(1500, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w5gyc"]
size = Vector2(287, 20)

[sub_resource type="QuadMesh" id="QuadMesh_dkhxp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2pnsx"]
size = Vector2(1836.75, 20)

[sub_resource type="QuadMesh" id="QuadMesh_2n31y"]

[sub_resource type="LabelSettings" id="LabelSettings_cgjej"]

[sub_resource type="Animation" id="Animation_jnep1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main/slider:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(472, 269)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Main/elevetah:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(679, 495)]
}

[sub_resource type="Animation" id="Animation_kwo86"]
resource_name = "rotatoria_pazza"
length = 8.0
loop_mode = 1

[sub_resource type="Animation" id="Animation_ca00s"]
resource_name = "slide"
length = 2.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main/slider:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(472, 269), Vector2(809, 269)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Main/elevetah:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(679, 495), Vector2(679, 831)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bvqpr"]
_data = {
"RESET": SubResource("Animation_jnep1"),
"rotatoria_pazza": SubResource("Animation_kwo86"),
"slide": SubResource("Animation_ca00s")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s5dga"]
size = Vector2(6864.5, 20)

[sub_resource type="QuadMesh" id="QuadMesh_fjjqm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7gvkh"]
size = Vector2(20, 2344)

[sub_resource type="QuadMesh" id="QuadMesh_hytxx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k0p52"]
size = Vector2(1076, 20)

[sub_resource type="QuadMesh" id="QuadMesh_54tj6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d0t2h"]
size = Vector2(788, 39.5)

[sub_resource type="QuadMesh" id="QuadMesh_2qq2g"]

[sub_resource type="QuadMesh" id="QuadMesh_26l06"]
size = Vector2(30, 30)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_w475f"]
resource_name = "piattaforna_lezza"
texture = ExtResource("6_v0qk3")
texture_region_size = Vector2i(170, 65)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-85, -33, 85, -32, 85, 32.5, -84.5, 32.5)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
8:0/0 = 0
8:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
7:1/0 = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_0/angular_velocity = 0.0
8:1/0 = 0
8:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:1/0/physics_layer_0/angular_velocity = 0.0
9:1/0 = 0
9:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
7:2/0 = 0
7:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:2/0/physics_layer_0/angular_velocity = 0.0
8:2/0 = 0
8:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:2/0/physics_layer_0/angular_velocity = 0.0
9:2/0 = 0
9:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:2/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
5:3/0 = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_0/angular_velocity = 0.0
6:3/0 = 0
6:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_0/angular_velocity = 0.0
7:3/0 = 0
7:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:3/0/physics_layer_0/angular_velocity = 0.0
8:3/0 = 0
8:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:3/0/physics_layer_0/angular_velocity = 0.0
9:3/0 = 0
9:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:3/0/physics_layer_0/angular_velocity = 0.0
9:0/0 = 0
9:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_q08i8"]
texture = ExtResource("7_v2mpq")
texture_region_size = Vector2i(170, 64)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-85.25, -31.75, 85, -32, 85.5, 31.75, -84.9259, 32.1449)
0:0/0/physics_layer_0/polygon_0/one_way = true
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
8:0/0 = 0
8:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:0/0/physics_layer_0/angular_velocity = 0.0
9:0/0 = 0
9:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
7:1/0 = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_0/angular_velocity = 0.0
8:1/0 = 0
8:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:1/0/physics_layer_0/angular_velocity = 0.0
9:1/0 = 0
9:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
7:2/0 = 0
7:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:2/0/physics_layer_0/angular_velocity = 0.0
8:2/0 = 0
8:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:2/0/physics_layer_0/angular_velocity = 0.0
9:2/0 = 0
9:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:2/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
5:3/0 = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_0/angular_velocity = 0.0
6:3/0 = 0
6:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_0/angular_velocity = 0.0
7:3/0 = 0
7:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:3/0/physics_layer_0/angular_velocity = 0.0
8:3/0 = 0
8:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:3/0/physics_layer_0/angular_velocity = 0.0
9:3/0 = 0
9:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:3/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_8qnou"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_w475f")
sources/1 = SubResource("TileSetAtlasSource_q08i8")

[node name="Main" type="Node"]
script = ExtResource("1_ibgdh")
mob_scene = ExtResource("2_ywjwa")

[node name="platform" type="StaticBody2D" parent="."]
position = Vector2(6, -1)
physics_material_override = SubResource("PhysicsMaterial_0fw2y")
metadata/_edit_group_ = true

[node name="CollisionShape2D1" type="CollisionShape2D" parent="platform"]
position = Vector2(292, 455.5)
shape = SubResource("RectangleShape2D_h7oyq")

[node name="MeshInstance2D" type="MeshInstance2D" parent="platform"]
position = Vector2(292.75, 456)
scale = Vector2(0.390333, 1)
mesh = SubResource("QuadMesh_ppv4k")

[node name="wall" type="StaticBody2D" parent="."]
position = Vector2(84, 195)
physics_material_override = SubResource("PhysicsMaterial_0fw2y")
metadata/_edit_group_ = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="wall"]
position = Vector2(292, 455.5)
rotation = 1.5708
shape = SubResource("RectangleShape2D_h7oyq")

[node name="MeshInstance2D" type="MeshInstance2D" parent="wall"]
position = Vector2(292.75, 456)
rotation = 1.5708
scale = Vector2(0.390333, 1)
mesh = SubResource("QuadMesh_ppv4k")

[node name="cosetti" type="StaticBody2D" parent="."]
position = Vector2(1584, -128)
physics_material_override = SubResource("PhysicsMaterial_0fw2y")

[node name="MeshInstance2D" type="MeshInstance2D" parent="cosetti"]
position = Vector2(-431, 306)
scale = Vector2(0.103167, 1)
mesh = SubResource("QuadMesh_ppv4k")

[node name="MeshInstance2D2" type="MeshInstance2D" parent="cosetti"]
position = Vector2(-268, 306)
scale = Vector2(0.103167, 1)
mesh = SubResource("QuadMesh_ppv4k")

[node name="MeshInstance2D3" type="MeshInstance2D" parent="cosetti"]
position = Vector2(-108, 306)
scale = Vector2(0.103167, 1)
mesh = SubResource("QuadMesh_ppv4k")

[node name="MeshInstance2D4" type="MeshInstance2D" parent="cosetti"]
position = Vector2(54, 306)
scale = Vector2(0.103167, 1)
mesh = SubResource("QuadMesh_ppv4k")

[node name="MeshInstance2D5" type="MeshInstance2D" parent="cosetti"]
position = Vector2(216, 306)
scale = Vector2(0.103167, 1)
mesh = SubResource("QuadMesh_ppv4k")

[node name="MeshInstance2D6" type="MeshInstance2D" parent="cosetti"]
position = Vector2(382, 306)
scale = Vector2(0.103167, 1)
mesh = SubResource("QuadMesh_ppv4k")

[node name="MeshInstance2D7" type="MeshInstance2D" parent="cosetti"]
position = Vector2(548, 305)
scale = Vector2(0.103167, 1)
mesh = SubResource("QuadMesh_ppv4k")

[node name="MeshInstance2D8" type="MeshInstance2D" parent="cosetti"]
position = Vector2(710, 305)
scale = Vector2(0.103167, 1)
mesh = SubResource("QuadMesh_ppv4k")

[node name="MeshInstance2D9" type="MeshInstance2D" parent="cosetti"]
position = Vector2(873, 305)
scale = Vector2(0.103167, 1)
mesh = SubResource("QuadMesh_ppv4k")

[node name="MeshInstance2D10" type="MeshInstance2D" parent="cosetti"]
position = Vector2(1040, 305)
scale = Vector2(0.103167, 1)
mesh = SubResource("QuadMesh_ppv4k")

[node name="MeshInstance2D11" type="MeshInstance2D" parent="cosetti"]
position = Vector2(1202, 305)
scale = Vector2(0.103167, 1)
mesh = SubResource("QuadMesh_ppv4k")

[node name="MeshInstance2D12" type="MeshInstance2D" parent="cosetti"]
position = Vector2(1375, 305)
scale = Vector2(0.103167, 1)
mesh = SubResource("QuadMesh_ppv4k")

[node name="MeshInstance2D13" type="MeshInstance2D" parent="cosetti"]
position = Vector2(1541, 305)
scale = Vector2(0.103167, 1)
mesh = SubResource("QuadMesh_ppv4k")

[node name="Player" parent="." instance=ExtResource("3_lxfbs")]
position = Vector2(1798, 912)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../../Camera2D")

[node name="slider" type="AnimatableBody2D" parent="."]
position = Vector2(472, 269)
metadata/_edit_group_ = true

[node name="CollisionShape2D5" type="CollisionShape2D" parent="slider"]
position = Vector2(144, 11)
shape = SubResource("RectangleShape2D_w5gyc")

[node name="MeshInstance2D" type="MeshInstance2D" parent="slider"]
position = Vector2(144, 11)
scale = Vector2(287, 20)
mesh = SubResource("QuadMesh_dkhxp")

[node name="elevetah" type="AnimatableBody2D" parent="."]
position = Vector2(679, 495)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="elevetah"]
position = Vector2(144, 11)
shape = SubResource("RectangleShape2D_w5gyc")

[node name="MeshInstance2D" type="MeshInstance2D" parent="elevetah"]
position = Vector2(144, 11)
scale = Vector2(287, 20)
mesh = SubResource("QuadMesh_dkhxp")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(1072, 434)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1012, 11)
shape = SubResource("RectangleShape2D_2pnsx")

[node name="MeshInstance2D" type="MeshInstance2D" parent="StaticBody2D"]
position = Vector2(1011.75, 10.75)
scale = Vector2(2024.5, 22.5)
mesh = SubResource("QuadMesh_2n31y")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="Label" type="Label" parent="CanvasLayer"]
clip_contents = true
offset_left = 16.0
offset_top = 207.0
offset_right = 127.0
offset_bottom = 256.0
text = "<- : move left
-> : move right"
label_settings = SubResource("LabelSettings_cgjej")
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="CanvasLayer"]
offset_left = 504.0
offset_top = 231.0
offset_right = 623.0
offset_bottom = 285.0
text = "space: jump"
metadata/_edit_use_anchors_ = true

[node name="Label4" type="Label" parent="CanvasLayer"]
offset_left = 836.0
offset_top = 320.0
offset_right = 972.0
offset_bottom = 374.0
text = "in air press down 
to go down faster"
metadata/_edit_use_anchors_ = true

[node name="Label3" type="Label" parent="CanvasLayer"]
offset_left = 1070.0
offset_top = 257.0
offset_right = 1189.0
offset_bottom = 311.0
text = "shift while moving: dash
shift stading: rotate"
metadata/_edit_use_anchors_ = true

[node name="sliderAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_bvqpr")
}

[node name="border" type="StaticBody2D" parent="."]

[node name="CollisionBottom" type="CollisionShape2D" parent="border"]
position = Vector2(3030.5, 2334)
shape = SubResource("RectangleShape2D_s5dga")

[node name="CollisionBottom2" type="MeshInstance2D" parent="border"]
position = Vector2(3030, 2334)
scale = Vector2(6060, 20)
mesh = SubResource("QuadMesh_fjjqm")

[node name="CollisionTop" type="CollisionShape2D" parent="border"]
position = Vector2(2628.75, 10)
shape = SubResource("RectangleShape2D_s5dga")

[node name="CollisionTop2" type="MeshInstance2D" parent="border"]
position = Vector2(2227, 10)
scale = Vector2(4454, 20)
mesh = SubResource("QuadMesh_fjjqm")

[node name="CollisionRight" type="CollisionShape2D" parent="border"]
position = Vector2(6071, 1172)
shape = SubResource("RectangleShape2D_7gvkh")

[node name="CollisionRight2" type="MeshInstance2D" parent="border"]
position = Vector2(-10, 1172)
scale = Vector2(20, 2344)
mesh = SubResource("QuadMesh_hytxx")

[node name="CollisionLeft" type="CollisionShape2D" parent="border"]
position = Vector2(-10, 1172)
shape = SubResource("RectangleShape2D_7gvkh")
debug_color = Color(1, 1, 1, 0.419608)

[node name="CollisionLeft2" type="MeshInstance2D" parent="border"]
position = Vector2(6071, 1172)
scale = Vector2(20, 2344)
mesh = SubResource("QuadMesh_hytxx")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]

[node name="plat4" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(749, 2099)
shape = SubResource("RectangleShape2D_k0p52")

[node name="MeshInstance2D" type="MeshInstance2D" parent="StaticBody2D2/plat4"]
position = Vector2(4.94719e-06, 4.19617e-05)
scale = Vector2(1076, 20.0001)
mesh = SubResource("QuadMesh_54tj6")

[node name="plat5" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(416, 1554)
shape = SubResource("RectangleShape2D_d0t2h")
metadata/_edit_group_ = true

[node name="MeshInstance2D" type="MeshInstance2D" parent="StaticBody2D2/plat5"]
position = Vector2(0, -1.90735e-05)
scale = Vector2(788, 40)
mesh = SubResource("QuadMesh_2qq2g")

[node name="Rotatoria Pazza" parent="." instance=ExtResource("5_yml8t")]
position = Vector2(5058, 1742)

[node name="Rotatoria Pazza2" parent="." instance=ExtResource("5_yml8t")]
position = Vector2(1595, 1344)

[node name="EnemySpawn" type="Marker2D" parent="."]
position = Vector2(3035, 1273)
metadata/_edit_group_ = true

[node name="MeshInstance2D" type="MeshInstance2D" parent="EnemySpawn"]
mesh = SubResource("QuadMesh_26l06")
texture = ExtResource("4_b4dak")

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1798, 912)
zoom = Vector2(0.5, 0.5)

[node name="Enemy" parent="." instance=ExtResource("2_ywjwa")]
position = Vector2(2941, 1468)

[node name="Piattaforma lezza" type="TileMap" parent="."]
tile_set = SubResource("TileSet_8qnou")
format = 2
layer_0/tile_data = PackedInt32Array(6357136, 0, 0, 6357147, 0, 0, 6357158, 0, 0, 6357169, 0, 0, 6357180, 0, 0, 6357191, 0, 0, 6357202, 0, 0, 6357213, 0, 0, 6357224, 0, 0, 8716432, 1, 0, 8716443, 1, 0, 8716454, 1, 0, 8716465, 1, 0, 8716476, 1, 0, 8716487, 1, 0, 8716498, 1, 0, 8716509, 1, 0, 7667857, 1, 0, 7667868, 1, 0, 7667880, 1, 0, 7667892, 1, 0, 7667905, 1, 0, 7667917, 1, 0, 7667928, 1, 0, 7667940, 1, 0, 7667951, 1, 0, 7667963, 1, 0, 8716520, 1, 0, 8716531, 1, 0, 8716542, 1, 0, 8716554, 1, 0, 8716565, 1, 0, 7667991, 1, 0, 6357142, 0, 0, 6357153, 0, 0, 6357164, 0, 0, 6357173, 0, 0, 6357183, 0, 0, 6357197, 0, 0, 6357206, 0, 0, 6357217, 0, 0, 7667956, 1, 0, 7667948, 1, 0, 7667934, 1, 0, 7667922, 1, 0, 7667909, 1, 0, 7667899, 1, 0, 7667886, 1, 0, 7667874, 1, 0, 7667864, 1, 0, 8716439, 1, 0, 8716447, 1, 0, 8716461, 1, 0, 8716472, 1, 0, 8716480, 1, 0, 8716490, 1, 0, 8716503, 1, 0, 8716514, 1, 0, 8716525, 1, 0, 8716537, 1, 0, 8716549, 1, 0, 8716557, 1, 0, 7667971, 1, 0, 7667977, 1, 0, 7667983, 1, 0, 8716570, 1, 0, 8716577, 1, 0, 8716583, 1, 0)
